Documentation edits made through Mintlify web editor

--- a/app-builder/builder/components/categories.mdx
+++ b/app-builder/builder/components/categories.mdx
@@ -3,12 +3,13 @@ title: "Categories"
 description: "Description of your new file."
 icon: "circle-user"
 ---
-### **4.2.3. Categories** 
 
-	**Dữ liệu**
+### **4.2.3. Categories**
 
-* **Thêm dữ liệu mới:**  
-  * **Bước 1**: Người dùng nhấn vào nút "Thêm dữ liệu mới"
+**Dữ liệu**
+
+- **Thêm dữ liệu mới:**
+  - **Bước 1**: Người dùng nhấn vào nút "Thêm dữ liệu mới"
 
 <Frame caption="Nút thêm dữ liệu ">
   <img
@@ -19,12 +20,11 @@ icon: "circle-user"
   />
 </Frame>
 
-  
-  * **Bước 2:**  
-    * Người dùng nhập tên danh mục  
-    * Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện"  
-    * Chọn đường dẫn đến trang khác nếu đây là danh mục chứa các trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này trên danh mục)  
-      * Hoặc chọn đường dẫn đến danh mục sản phẩm nếu đây là danh mục chứa các danh mục sản phẩm (người dùng sẽ được điều hướng đến trang danh mục sản phẩm nào nào khi nhấn vào ảnh này trên danh mục)
+  - **Bước 2:**
+    - Người dùng nhập tên danh mục
+    - Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện"
+    - Chọn đường dẫn đến trang khác nếu đây là danh mục chứa các trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này trên danh mục)
+      - Hoặc chọn đường dẫn đến danh mục sản phẩm nếu đây là danh mục chứa các danh mục sản phẩm (người dùng sẽ được điều hướng đến trang danh mục sản phẩm nào nào khi nhấn vào ảnh này trên danh mục)
 
 <Frame caption="Thêm dữ liệu cho danh mục  ">
   <img
@@ -35,10 +35,10 @@ icon: "circle-user"
   />
 </Frame>
 
+  - **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh cho danh mục hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
 
-  * **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh cho danh mục hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu  
-* **Chỉnh sửa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image94]để đến trang chỉnh sửa
+- **Chỉnh sửa:**
+  - **Bước 1:** Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để đến trang chỉnh sửa
 
 <Frame caption="Nút chỉnh sửa ">
   <img
@@ -48,8 +48,8 @@ icon: "circle-user"
     title=""
   />
 </Frame>
- 
-  * **Bước 2:** Người dùng nhập tên danh mục, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" và chọn đường dẫn đến trang khác nếu đây là danh mục chứa các trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này trên danh mục) hoặc chọn đường dẫn đến danh mục sản phẩm nếu đây là danh mục chứa các danh mục sản phẩm (người dùng sẽ được điều hướng đến trang danh mục sản phẩm nào nào khi nhấn vào ảnh này trên danh mục)
+
+  - **Bước 2:** Người dùng nhập tên danh mục, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" và chọn đường dẫn đến trang khác nếu đây là danh mục chứa các trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này trên danh mục) hoặc chọn đường dẫn đến danh mục sản phẩm nếu đây là danh mục chứa các danh mục sản phẩm (người dùng sẽ được điều hướng đến trang danh mục sản phẩm nào nào khi nhấn vào ảnh này trên danh mục)
 
 <Frame caption="Trang chỉnh sửa dữ liệu  ">
   <img
@@ -60,10 +60,10 @@ icon: "circle-user"
   />
 </Frame>
 
+  - **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh cho thẻ trong danh mục hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
 
-  * **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh cho thẻ trong danh mục hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu  
-* **Xóa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image97]để xóa dữ liệu
+- **Xóa:**
+  - **Bước 1:** Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa dữ liệu
 
 <Frame caption="Nút xóa  ">
   <img
@@ -74,13 +74,12 @@ icon: "circle-user"
   />
 </Frame>
 
- 
-  * **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn 'Xóa ngay" để tiến hành xóa thẻ khỏi danh mục hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
+  - **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn "Xóa ngay" để tiến hành xóa thẻ khỏi danh mục hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
 
 **Tổng quan**
 
-* **Hiển thị tiêu đề:**  
-  * Người dùng nhấn nút ![][image80]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần tử danh mục. Ví dụ, nếu tiêu đề là "Đây là danh mục" thì phần tử danh mục sẽ như thế này
+- **Hiển thị tiêu đề:**
+  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần tử danh mục. Ví dụ, nếu tiêu đề là "Đây là danh mục" thì phần tử danh mục sẽ như thế này
 
 <Frame caption="Tiêu đề danh mục ">
   <img
@@ -91,38 +90,40 @@ icon: "circle-user"
   />
 </Frame>
 
+- **Kích thước/ Màu sắc:**
+  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của danh mục tại ![][image82]
 
-* **Kích thước/ Màu sắc:**  
-  * Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của danh mục tại ![][image82]  
-* **Chế độ xếp hàng:**  
-  * Người dùng nhấn nút ![][image233]để chuyển đổi qua lại giữa 2 trạng thái có xếp hàng và không có xếp hàng. Nếu bật, người dùng sẽ nhập số cột, số cột sẽ phân bố các thành phần bên trong danh mục thành từng cột.   
-* **Số phần tử:**  
-  * Người dùng có thể giới hạn số phần tử có thể có trong danh mục, các phần tử xếp sau sẽ bị loại bỏ nếu vượt quá số lượng phần tử  
-* **Chi tiết phần tử**  
-  * **Lề ngoài**  
-    * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ với các thẻ khác bằng nút ![][image59]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image60]  
-    * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ với các thẻ khác bằng nút ![][image61]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image62]  
-  * **Lề trong**  
-    * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa lề các thẻ bằng nút ![][image63]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image64]  
-    * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa lề các thẻ bằng nút ![][image65]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image66]  
-  * **Nền**  
-    * Chọn màu nền cho các thẻ bằng cách nhấn ô vuông ![][image67]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image68]  
-    * Xóa màu nền bằng cách nhấn nút ![][image69]  
-  * **Bo góc**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các thẻ tại ô nhập ![][image70]hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image71]  
-  * **Viền**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các thẻ tại ô nhập ![][image72]  
-    * Chọn màu cho viền bằng cách nhấn ô vuông ![][image73]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image74]  
-    * Xóa viền bằng cách nhấn nút ![][image75]  
-  * **Đổ bóng**  
-    * Người dùng có thể chọn độ lớn đổ bóng của các thẻ tại ô ![][image76]  
-    * Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image77]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image78]  
-    * Xóa đồ bóng bằng cách nhấn nút ![][image79]  
-  * **Hiển thị tên danh mục**  
-    * Người dùng nhấn nút ![][image234]để chuyển đổi qua lại giữa 2 trạng thái có tên của các thẻ trong danh mục và không có tên của các thẻ trong danh mục. Nếu bật, người dùng sẽ nhập kích thước tên, màu của tên. Ví dụ, nếu chọn kích thước là 12 và màu đen thì danh mục sẽ như thế này:
+- **Chế độ xếp hàng:**
+  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có xếp hàng và không có xếp hàng. Nếu bật, người dùng sẽ nhập số cột, số cột sẽ phân bố các thành phần bên trong danh mục thành từng cột.
+
+- **Số phần tử:**
+  - Người dùng có thể giới hạn số phần tử có thể có trong danh mục, các phần tử xếp sau sẽ bị loại bỏ nếu vượt quá số lượng phần tử
+
+- **Chi tiết phần tử**
+  - **Lề ngoài**
+    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ với các thẻ khác bằng nút ![][image59] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image60]
+    - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ với các thẻ khác bằng nút ![][image61] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image62]
+  - **Lề trong**
+    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa lề các thẻ bằng nút ![][image63] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image64]
+    - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa lề các thẻ bằng nút ![][image65] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image66]
+  - **Nền**
+    - Chọn màu nền cho các thẻ bằng cách nhấn ô vuông ![][image67] sau đó chọn màu
+    - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+    - Xóa màu nền bằng cách nhấn nút ![][image69]
+  - **Bo góc**
+    - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các thẻ tại ô nhập ![][image70] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image71]
+  - **Viền**
+    - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các thẻ tại ô nhập ![][image72]
+    - Chọn màu cho viền bằng cách nhấn ô vuông ![][image73] sau đó chọn màu
+    - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+    - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - **Đổ bóng**
+    - Người dùng có thể chọn độ lớn đổ bóng của các thẻ tại ô ![][image76]
+    - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image77] sau đó chọn màu
+    - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+    - Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - **Hiển thị tên danh mục**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tên của các thẻ trong danh mục và không có tên của các thẻ trong danh mục. Nếu bật, người dùng sẽ nhập kích thước tên, màu của tên. Ví dụ, nếu chọn kích thước là 12 và màu đen thì danh mục sẽ như thế này:
 
 <Frame caption="Danh mục  ">
   <img
@@ -133,19 +134,18 @@ icon: "circle-user"
   />
 </Frame>
 
- 
-* **Hình ảnh danh mục**  
-  * **Kích thước:**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung kích thước của các hình ảnh trong từng thẻ tại ![][image236]hoặc riêng giữa chiều dài và chiều rộng bằng cách nhấn nút ![][image237]  
-  * **Bo góc**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các ảnh tại ô nhập ![][image238]hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image239]  
-  * **Viền**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các ảnh tại ô nhập ![][image240]  
-    * Chọn màu cho viền bằng cách nhấn ô vuông ![][image241]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image242]  
-    * Xóa viền bằng cách nhấn nút ![][image243]  
-  * **Đổ bóng**  
-    * Người dùng có thể chọn độ lớn đổ bóng của các ảnh tại ô ![][image244]  
-    * Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image245]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image246]  
-    * Xóa đồ bóng bằng cách nhấn nút ![][image247]
+- **Hình ảnh danh mục**
+  - **Kích thước:**
+    - Người dùng có thể nhập hoặc tăng/giảm chung kích thước của các hình ảnh trong từng thẻ tại ![][image236] hoặc riêng giữa chiều dài và chiều rộng bằng cách nhấn nút ![][image237]
+  - **Bo góc**
+    - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các ảnh tại ô nhập ![][image238] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image239]
+  - **Viền**
+    - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các ảnh tại ô nhập ![][image240]
+    - Chọn màu cho viền bằng cách nhấn ô vuông ![][image241] sau đó chọn màu
+    - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+    - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - **Đổ bóng**
+    - Người dùng có thể chọn độ lớn đổ bóng của các ảnh tại ô ![][image244]
+    - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image245] sau đó chọn màu
+    - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+    - Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
