--- a/app-builder/builder/components/headers.mdx
+++ b/app-builder/builder/components/headers.mdx
@@ -6,16 +6,16 @@ icon: "circle-user"
 
 ### **4.2.1. Headers**
 
-- **Hiển thị logo:** Người dùng nhấn nút ![][image102]để chuyển đổi qua lại giữa 2 trạng thái có logo và không có logo
-- **Hiển thị tiêu đề:** Người dùng nhấn nút ![][image192]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, người dùng đồng thời có thể chỉnh sửa tiêu đề cho tiêu đề tại thanh nhập
-- **Hiển thị phụ đề:** Người dùng nhấn nút ![][image193]để chuyển đổi qua lại giữa 2 trạng thái có phụ đề và không có phụ đề, người dùng đồng thời có thể chỉnh sửa phụ đề cho phụ đề tại thanh nhập
-- **Hiển thị icon giỏ hàng:** Người dùng nhấn nút ![][image194]để chuyển đổi qua lại giữa 2 trạng thái có icon giỏ hàng và không có icon giỏ hàng
-- **Hiển thị icon tin nhắn:** Người dùng nhấn nút ![][image195]để chuyển đổi qua lại giữa 2 trạng thái có icon tin nhắn và không có icon tin nhắn
-- **Hiển thị icon tìm kiếm:** Người dùng nhấn nút ![][image196]để chuyển đổi qua lại giữa 2 trạng thái có icon tìm kiếm và không có icon tìm kiếm
+- **Hiển thị logo:** Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có logo và không có logo
+- **Hiển thị tiêu đề:** Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, người dùng đồng thời có thể chỉnh sửa tiêu đề cho tiêu đề tại thanh nhập
+- **Hiển thị phụ đề:** Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có phụ đề và không có phụ đề, người dùng đồng thời có thể chỉnh sửa phụ đề cho phụ đề tại thanh nhập
+- **Hiển thị icon giỏ hàng:** Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có icon giỏ hàng và không có icon giỏ hàng
+- **Hiển thị icon tin nhắn:** Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có icon tin nhắn và không có icon tin nhắn
+- **Hiển thị icon tìm kiếm:** Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có icon tìm kiếm và không có icon tìm kiếm
 
 **Thanh tìm kiếm:**
 
-- **Hiển thị thanh tìm kiếm:** Người dùng nhấn nút ![][image197]để chuyển đổi qua lại giữa 2 trạng thái có thanh tìm kiếm và không có thanh tìm kiếm, người dùng đồng thời có thể chỉnh sửa văn bản mặc định cho thanh tìm kiếm tại thanh nhập
+- **Hiển thị thanh tìm kiếm:** Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có thanh tìm kiếm và không có thanh tìm kiếm, người dùng đồng thời có thể chỉnh sửa văn bản mặc định cho thanh tìm kiếm tại thanh nhập
 
 <Frame caption="Điều chỉnh thanh tìm kiếm   ">
   <img
@@ -26,7 +26,7 @@ icon: "circle-user"
   />
 </Frame>
 
-- **Hiển thị icon thông báo:** Người dùng nhấn nút ![][image196]để chuyển đổi qua lại giữa 2 trạng thái có icon thông báo và không có icon thông báo\
+- **Hiển thị icon thông báo:** Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có icon thông báo và không có icon thông báo\
 - **Trang tìm kiếm:** Người dùng thể chọn phạm vi tìm kiếm như **Sản phẩm** hoặc **Dịch vụ** trong phần tùy chọn.
 
 <Frame caption="Điều chỉnh tùy chọn trang tìm kiếm  ">
