--- a/app-builder/builder/img-library.mdx
+++ b/app-builder/builder/img-library.mdx
@@ -3,9 +3,11 @@ title: "Thư viện hình ảnh"
 description: "Description of your new file."
 icon: "photo-film"
 ---
-## **4.1. Thư viện hình ảnh** 
 
-Thư viện hình ảnh là nơi lưu trữ và quản lý tất cả các hình ảnh được sử dụng trong ứng dụng.  
+## **4.1. Thư viện hình ảnh**
+
+Thư viện hình ảnh là nơi lưu trữ và quản lý tất cả các hình ảnh được sử dụng trong ứng dụng.
+
 <Frame caption="Thư viện hình ảnh  ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image167_efaa8051c7.png"
@@ -15,10 +17,9 @@ Thư viện hình ảnh là nơi lưu trữ và quản lý tất cả các hình
   />
 </Frame>
 
+**Tải ảnh mới:**
 
-  **Tải ảnh mới:**
-
-  * **Bước 1**: Người dùng nhấn vào nút "Tải ảnh mới"
+- **Bước 1**: Người dùng nhấn vào nút "**Tải ảnh mới**"
 
 <Frame caption="Nút thêm mới  ">
   <img
@@ -29,14 +30,13 @@ Thư viện hình ảnh là nơi lưu trữ và quản lý tất cả các hình
   />
 </Frame>
 
+- **Bước 2:**
+  - Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện"
+- **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm mới hoặc nhấn "**Hủy bỏ**" để hủy quá trình thêm dữ liệu
 
-  * **Bước 2:**  
-    * Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện"   
-  * **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm mới hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
+**Xem:**
 
-  **Xem:**
-
-  	Người dùng nhấn ![][image187] để xem chi tiết hình ảnh
+Người dùng nhấn <Icon icon="eye" color="#cfcfcf" size={15} /> để xem chi tiết hình ảnh
 
 <Frame caption="Nút xem hình ảnh ">
   <img
@@ -47,11 +47,9 @@ Thư viện hình ảnh là nơi lưu trữ và quản lý tất cả các hình
   />
 </Frame>
 
+**Xóa:**\
+Người dùng nhấn <Icon icon="trash-can" color="#cfcfcf" size={15} /> để xóa bỏ hình ảnh
 
-
-	**Xóa:**  
-		Người dùng nhấn ![][image189] để xóa bỏ hình ảnh  
-        
 <Frame caption="Nút xóa hình ảnh  ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image170_30120f526a.png"
@@ -61,11 +59,9 @@ Thư viện hình ảnh là nơi lưu trữ và quản lý tất cả các hình
   />
 </Frame>
 
+**Hình ảnh của tôi**: hiển thị tất cả hình ảnh mà người dùng đã tải lên.
 
-
-  **Hình ảnh của tôi**: hiển thị tất cả hình ảnh mà người dùng đã tải lên.
-
-  **Thư viện hình ảnh**: cung cấp hình ảnh mẫu từ hệ thống.
+**Thư viện hình ảnh**: cung cấp hình ảnh mẫu từ hệ thống.
 
 <Frame caption="Thư viện ảnh ">
   <img
